<resources>
    <string name="app_name">TestTask</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="log_in_button">LOG IN</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="nav_drawer_photos">Photos</string>
    <string name="nav_drawer_map">Map</string>
    <string name="alert_title">Delete image?</string>
    <string name="alert_comment_title">Delete comment?</string>
    <string name="alert_message">This will permanently delete chosen image</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="invalid_login">Invalid login\nLength: 4–32; Pattern: [a–z0–9_\\-.@]</string>
    <string name="invalid_password">Invalid Password\nLength: 8–500</string>
    <string name="invalid_repeat_password">Passwords does not match</string>
</resources>